cabal-version:      3.0
name:               roman-calendar
version:            0.2.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Sean O'Mara
maintainer:         mseanomara@gmail.com
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Time.Calendar.RomanCatholic
    other-modules:    Data.Time.Calendar.RomanCatholic.Types
                    , Data.Time.Calendar.RomanCatholic.YearDates
                    , Data.Time.Calendar.RomanCatholic.Season
                    , Data.Time.Calendar.RomanCatholic.Celebrations.Temporal
                    , Data.Time.Calendar.RomanCatholic.Celebrations.Sanctoral
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
                    , time
    hs-source-dirs:   src
    default-language: Haskell2010
